bug fixing transaction

--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-PORT=3000
+# database connection
+PORT=3306
 USER_DB=root
-PASSWORD_DB=
+PASSWORD_DB=root
 HOST_DB=localhost
-DB_URI =
+
+
 
 
 # status user
